# langchain-agent

./: README.md  pyproject.toml
api/: agent.py  main.py
data/company_docs/: Health Insurance & Wellbeing Benefits Policy.docx
rag/: rag_pipeline.py
