[project]
name = "langchain-agent"
version = "0.1.0"
description = "An agent built with Langchain"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "langchain-chroma>=1.1.0",
    "pypdf>=6.6.2",
    "docx2txt>=0.9",
]
